--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <button class="delete-survey-button">删除问卷</button>
    </div>
   
-  <script src="首页.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
