--- a/发布问卷.html
+++ b/发布问卷.html
@@ -11,7 +11,7 @@
     <div class="header">
         <a class="WenHao">?</a><a class="WenJuan1">问卷管理</a>
         <div class="My-Questionnaire">
-            <a href="首页.html">我的问卷</a>
+            <a href="index.html">我的问卷</a>
         </div>
     </div>
     <div class="BaiKuang">
