--- a/查看问卷.html
+++ b/查看问卷.html
@@ -11,7 +11,7 @@
     <div class="header">
         <a class="WenHao">?</a><a class="WenJuan1">问卷管理</a>
         <div class="My-Questionnaire">
-            <a href="首页.html">我的问卷</a>
+            <a href="index.html">我的问卷</a>
         </div>
     </div>
     <div class="BaiKuang">
@@ -22,7 +22,7 @@
 
         </div>
         <hr>
-        <a class="a1" href="首页.html"><button class="return">返  回</button></a>
+        <a class="a1" href="index.html"><button class="return">返  回</button></a>
         <!-- 记得添加跳转页面 -->
     </div>
 
