--- a/分析问卷.html
+++ b/分析问卷.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../../Web前端/问卷调查/问卷调查/项目源代码/分析问卷.css">
-  <script src="../../../Web前端/问卷调查/问卷调查/项目源代码/分析问卷.js" defer></script>
+  <link rel="stylesheet" href="分析问卷.css">
+  <script src="分析问卷.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <title>分析数据</title>
 </head>
