--- a/index.html
+++ b/index.html
@@ -2,44 +2,42 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="index.css">
-   <script src="index.js" defer></script>
-   <title>问卷调查</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="首页.css">
+    <script src="首页.js" defer></script>
+    <title>问卷调查</title>
 
 </head>
 
 <body>
 
-   <div class="header">
-      <a class="WenHao">?</a ><a class="WenJuan1">问卷管理</a >
-      <div class="My-Questionnaire">
-         <a href=" ">我的问卷</a >
-      </div>
-   </div>
+    <div class="header">
+        <a class="WenHao">?</a><a class="WenJuan1">问卷管理</a>
+        <div class="My-Questionnaire">
+            <a href=" ">我的问卷</a>
+        </div>
+    </div>
 
-   <div class="liebiao">
-   <div class="title">问卷标题</div>
-   <div class="date1">创建日期</div>
-   <div class="date">发布日期</div>
-   <div class="date">截止日期</div>
-   <div class="status">问卷状态</div>
-   <div class="actions">操作区域</div>
+    <div class="liebiao">
+        <div class="title">问卷标题</div>
+        <div class="date1">创建日期</div>
+        <div class="date">发布日期</div>
+        <div class="date">截止日期</div>
+        <div class="status">问卷状态</div>
+        <div class="actions">操作区域</div>
+        <div id="add-questionnaire-container"><button class="button">+ <a href="编辑问卷.html">新建问卷</a></button></div>
+    </div>
 
-   <div><button class="button">+ <a href="编辑问卷.html">新建问卷</a></button></div>
-  </div>
+    <div class="kuang2">
+        <ul id="mylist"></ul>
+    </div>
+    <div class="kuang22">
+      <div id="addQuestionnaireContainer2"><button class="center-button">+ <a href="编辑问卷.html">新建问卷</a></button></div>
+        <input type="checkbox" id="selectAllCheckbox" /> <span id="selectAllText">全选</span>
+        <button class="delete-survey-button">删除问卷</button>
+    </div>
 
- <div class="kuang2">
-
-      <ul id="mylist"></ul>
-  </div>
-   <div class="kuang22">
-      <input type="checkbox" id="selectAllCheckbox" /> 全选
-      <button class="delete-survey-button">删除问卷</button>
-   </div>
-  
-  <script src="index.js"></script>
 </body>
 
 </html>
