--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="首页.css">
+    <script src="首页.js" defer></script>
     <title>问卷调查</title>
 
 </head>
@@ -33,7 +33,7 @@
         <ul id="mylist"></ul>
     </div>
     <div class="kuang22">
-      <div id="addQuestionnaireContainer2"><button class="center-button">+ <a href="编辑问卷.html">新建问卷</a></button></div>
+        <div id="addQuestionnaireContainer2"><button class="center-button">+ <a href="编辑问卷.html">新建问卷</a></button></div>
         <input type="checkbox" id="selectAllCheckbox" /> <span id="selectAllText">全选</span>
         <button class="delete-survey-button">删除问卷</button>
     </div>
