--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         <div class="date">截止日期</div>
         <div class="status">问卷状态</div>
         <div class="actions">操作区域</div>
-        <div id="add-questionnaire-container"><button class="button">+ <a href="编辑问卷.html">新建问卷</a></button></div>
+        <div id="add-questionnaire-container"><button class="button">+ <a href="新建问卷.html">新建问卷</a></button></div>
     </div>
 
     <div class="kuang2">
         <ul id="mylist"></ul>
     </div>
     <div class="kuang22">
-        <div id="addQuestionnaireContainer2"><button class="center-button">+ <a href="编辑问卷.html">新建问卷</a></button></div>
+        <div id="addQuestionnaireContainer2"><button class="center-button">+ <a href="新建问卷.html">新建问卷</a></button></div>
         <input type="checkbox" id="selectAllCheckbox" /> <span id="selectAllText">全选</span>
         <button class="delete-survey-button">删除问卷</button>
     </div>
