--- a/分析问卷.html
+++ b/分析问卷.html
@@ -25,8 +25,7 @@
     </div>
     <div id="bar - chart - container"></div>
     <hr>
-    <a class="a1" href=""><button class="return">返  回</button></a>
-    <!-- 记得添加跳转页面 -->
+    <a class="a1" href="index.html"><button class="return">返  回</button></a>
   </div>
 
 </body>
