--- a/填写问卷.html
+++ b/填写问卷.html
@@ -35,13 +35,11 @@
                 <button id="close">X</button>
             </div>
             <p id="message"></p>
-            <button id="OK">确定</button>
+            <a href="index.html"><button id="OK">确定</button></a> 
 
         </dialog>
-        <!-- 记得添加跳转页面 -->
     </div>
 
     
 </body>
 </html>
-
