--- a/填写问卷.html
+++ b/填写问卷.html
@@ -35,7 +35,7 @@
                 <button id="close">X</button>
             </div>
             <p id="message"></p>
-            <a href="index.html"><button id="OK">确定</button></a> 
+            <button id="OK">确定</button>
 
         </dialog>
     </div>
