--- a/编辑问卷.html
+++ b/编辑问卷.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="BaiKuang">
-        <input class="tittle" type="text" value="请在这里输入问卷的标题">
+        <input class="tittle" type="text" placeholder="请在这里输入问卷的标题">
         <div class="contain"></div>
         <button class="addQuest">+添加问题</button>
         <div class="QuestStyle" style="display: none">
